@@ -2,6 +2,8 @@ Nutch Change Log
 
 (trunk) Current Development:
 
+* NUTCH-1320 IndexChecker and ParseChecker choke on IDN's (markus)
+
 * NUTCH-1351 DomainStatistics to aggregate by TLD (markus)
 
 * NUTCH-1381 Allow to override default subcollection field name (markus)
